--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
--r requirements/requirements.txt
+numpy
+pyyaml
+torch==1.5.0
+torchvision==0.6.0
+opencv-python
+terminaltables
+motmetrics
+pandas
+lap
